# volo-example

./: .gitignore  Cargo.toml  Makefile  README.md
common/: Cargo.toml
common/src/: grpc_adress.rs  grpc_client.rs  lib.rs
common/src/grpc/: address.rs  client.rs
micro/example/: Cargo.toml
micro/example/src/: lib.rs
micro/hello/: Cargo.toml
micro/hello/src/: lib.rs
proto/example/: example.proto
proto/hello/: hello.proto
server/: Cargo.toml
server/src/: lib.rs
volo-gen/: Cargo.toml  volo.yml
volo-gen/src/: lib.rs
