[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
volo = { workspace = true }
volo-http = { workspace = true }
volo-gen = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
